# hands-and-objects

./: README.md
SlowFast-Perceiver/: .gitignore  README.md  dataset_test.py  run.py
SlowFast-Perceiver/annotations/: splits.json  video_component_locations_university_video_access.csv  video_manifest_w3d_paths.csv
SlowFast-Perceiver/configs/: 2021-08-30_keyframe_loc_release1_toy_experiment.yaml  2021-09-16_keyframe-loc_release1-v2_data-loader-test.yaml  data_loader_test_canonical_form_25-08-21.yaml  defaults.py  ego4d_kf_loc_release1_clip_extraction.yaml  ego4d_kf_loc_test.yaml  ego4d_kf_loc_test_ada.yaml  ego4d_kf_loc_test_cmu.yaml  frame_selection.yaml  keyframe_loc_train_single_pred_26-05-21.yaml  keyframe_loc_train_single_pred_28-06-21.yaml  keyframe_loc_train_single_pred_4_layer_3_kernel_size_temporal_kernel_debug_24-07-21.yaml  keyframe_loc_train_single_pred_diff_temporal_kernel_debug_23-07-21.yaml  slowfast_config.yaml  slowfast_config_test.yaml  vivit_config.yaml
SlowFast-Perceiver/datasets/: CanonicalKeyframeLocalisation.py  CanonicalKeyframeLocalisation_v3.py  Ego4DKeyframeLocalisation.py  Ego4DKeyframeLocalisation_release1.py  FrameSelectionDataset.py  __init__.py  annotations.py  dsutils.py  loader.py
SlowFast-Perceiver/misc/: canonical_release1_data_download_fair_s3.py  data_download_fair_s3.py  no_state_change_data_prep_canonical.py  no_state_change_data_prep_canonical_v2.py  no_state_change_data_prep_v2.py  release1_data_clipping.py  release1_data_download_fair_s3.py
SlowFast-Perceiver/models/: __init__.py  action_det_models.py  frameselection_models.py  head_helper.py  keyframe_loc_models.py  losses.py  multi_models.py  optimizer.py  resnet_helper.py  sta_models.py  transformer_helper.py  video_model_builder.py
SlowFast-Perceiver/optimizers/: optimizer.py
SlowFast-Perceiver/tasks/: keyframe_detection.py  (+1 more)
object-of-change-detection/: README.md
state-change-localization-classification/: README.md
state-change-localization-classification/bmn/dense_flow/include/CLUE/: .gitignore  CMakeLists.txt  README.md
state-change-localization-classification/bmn/dense_flow/include/CLUE/doc/source/: concurrent_queue.rst  conf.py  index.rst  meta.rst  meta_seq.rst  misc.rst  optional.rst  reindexed_view.rst  string_view.rst  stringex.rst  thread_pool.rst  type_name.rst
state-change-localization-classification/bmn/dense_flow/include/CLUE/examples/: ex_threadpool.cpp  ex_timing.cpp
state-change-localization-classification/bmn/dense_flow/include/CLUE/include/clue/: array_view.hpp  memory.hpp  meta.hpp  predicates.hpp  preproc.hpp  reindexed_view.hpp  sformat.hpp  shared_mutex.hpp  string_view.hpp  stringex.hpp  thread_pool.hpp  type_name.hpp
state-change-localization-classification/bmn/dense_flow/include/CLUE/tests/: test_concurrent_counter.cpp  test_concurrent_queue.cpp  test_include_all.cpp  test_optional.cpp  test_shared_mutex.cpp  test_string_view.cpp  test_stringex.cpp
state-change-object-detection-baselines/: README.md
(+210 files in other folders)
